<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="290dp"
        android:layout_height="42dp"
        android:text="@string/computer_s_choice"
        android:textSize="30sp"
        android:layout_marginTop="17dp"
        app:layout_constraintTop_toBottomOf="@+id/playButton"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_editor_absoluteX="16dp"
        app:layout_constraintHorizontal_bias="0.504" />

    <Button
        android:id="@+id/playButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="play"
        android:text="@string/play"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/rpsEditText"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <ImageView
        android:id="@+id/rpsImage"
        android:layout_width="185dp"
        android:layout_height="99dp"
        android:scaleType="fitCenter"
        android:src="@drawable/rock"
        android:contentDescription="@string/computer_s_hand"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="35dp"
        android:layout_marginEnd="35dp"/>

    <EditText
        android:id="@+id/rpsEditText"
        android:layout_width="230dp"
        android:layout_height="40dp"
        android:inputType="text"
        android:maxLines="1"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:layout_width="137dp"
        android:layout_height="27dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/waiting"
        android:id="@+id/winnerLabel"
        app:layout_constraintLeft_toRightOf="@+id/textView2"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/rpsImage" />

    <TextView
        android:layout_width="300dp"
        android:layout_height="31dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/enter_rock_paper_or_scissors"
        android:id="@+id/textView"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:layout_width="88dp"
        android:layout_height="28dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/compMoveTextView"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="30dp"
        app:layout_constraintRight_toLeftOf="@+id/guideline"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintHorizontal_bias="0.081"
        android:layout_marginTop="48dp"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:layout_editor_absoluteX="28dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/winner"
        android:id="@+id/textView2"
        app:layout_constraintRight_toLeftOf="@+id/winnerLabel"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/rpsImage"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginRight="0dp"
        android:layout_marginEnd="0dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="180dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="273dp"
        android:layout_height="38dp"
        android:text="@string/human_s_choice"
        android:textSize="30sp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/human_score"
        android:textSize="24sp"
        app:layout_constraintRight_toLeftOf="@+id/guideline"
        android:layout_marginRight="19dp"
        android:layout_marginEnd="6dp"
        android:layout_marginTop="29dp"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="1.0" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/comp_score"
        android:textSize="24sp"
        android:layout_marginLeft="10dp"
        app:layout_constraintLeft_toLeftOf="@+id/guideline"
        android:layout_marginTop="28dp"
        app:layout_constraintTop_toBottomOf="@+id/winnerLabel"
        android:layout_marginStart="10dp"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/hScoreTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/_0"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintRight_toLeftOf="@+id/cScoreTextView"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/cScoreTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/_0"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/hScoreTextView" />

</android.support.constraint.ConstraintLayout>
